--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,16 +14,30 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_animate: ^2.0.1
   skeletons: ^0.0.3
+  flutter_native_splash: ^2.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
 
+flutter_native_splash:
+  color: "#054893"
+  image: assets/images/logo_white.png
+  android: true
+  ios: true
+  web: true
+  android_12:
+    image: assets/images/app_icon.png
+    color: "#054893"
+
+  
+
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/fonts/
     - assets/icons/
 
   fonts:
