--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_animate: ^2.0.1
   skeletons: ^0.0.3
   flutter_native_splash: ^2.3.1
+  connectivity_plus: ^4.0.1
+  easy_stepper: ^0.7.3
 
 dev_dependencies:
   flutter_test:
